# gcp-rust-blog-public

./: .env.template  .envrc  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  FRONTEND_DEVELOPMENT.md  README.md  SECURITY.md  bacon.toml  devloop.toml  tailwind.config.js  tailwind.css
.github/docker/: content-overlay.Dockerfile
.github/workflows/: deploy.yml  pr.yml
content/: 404.md  banner.html  home.html  home.md  layout.html  site.toml
content/posts/: 2026-03-02-how-this-blog-works.md  2026-03-02-strangelove-ai-systems.md  2026-03-03-optimise-for-the-cheapest-change.md  2026-03-04-cost-of-change.md  2026-03-05-wide-and-tall-coupling.md  2026-03-13-impossible-requests-missing-capabilities.md  2026-03-13-the-responsibility-trap.md  ai-feb-2026.md  ai-mar-2026.md  first-post.md
content/static/: tailwind.css
docs/: INFRASTRUCTURE.md  SECURITY.md
infra/: README.md  github_secrets.tf  load_balancer.tf  main.tf  outputs.tf  prod.tfvars.template  variables.tf
infra/immutable/: main.tf  outputs.tf  variables.tf  versions.tf
infra/testable/: main.tf  outputs.tf  variables.tf
scripts/: build-css.sh  cloudflared-bacon-run.sh  current-browser-path.sh  current-post-slug.sh  deploy-cloud-run.sh  dress-testable.sh  preview-check.sh  render-backend-config.sh  tailwatch.sh
src/: content_loader.rs  hot_reload.js  hot_reload.rs  main.rs  markdown.rs  models.rs  page_meta.rs  state.rs  test_support.rs
