[package]
name = "gcp-rust-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
pulldown-cmark = "0.13"
tower-http = { version = "0.6", features = ["fs"] }
gray_matter = "0.3.2"
serde = "1.0.228"
